syntax = "proto3";

package grpc;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

import "github.com/elojah/game_03/pkg/user/dto/user.proto";

service Auth {
    // Signin Twitch
    rpc SigninTwitch(google.protobuf.StringValue) returns (dto.SigninResp);

	// Signin Google
	rpc SigninGoogle(google.protobuf.StringValue) returns (dto.SigninResp);

    // Ping
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}
