syntax = "proto3";

package twitch;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Token {
    string AccessToken    = 1;
    string RefreshToken   = 2;
    int64 ExpiresIn       = 3;
    repeated string Scope = 4;
    string TokenType      = 5;
}
